deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-2-deployment
  namespace: webapp2
  labels:
    app: web-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-2
  template:
    metadata:
      labels:
        app: web-2
    spec:
      containers:
      - name: web-2
        image: eu.gcr.io/premium-origin-233501/web-app
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: web-2-service
  labels:
    app: web-2
  namespace: webapp2
spec:
  selector:
    app: web-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
