deployment-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-3-deployment
  namespace: webapp3
  labels:
    app: web-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-3
  template:
    metadata:
      labels:
        app: web-3
    spec:
      containers:
      - name: web-3
        image: eu.gcr.io/premium-origin-233501/web-app
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: web-3-service
  labels:
    app: web-3
  namespace: webapp3
spec:
  selector:
    app: web-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
