ingress-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web2-static-ip"
    #cert-manager.io/issuer: prod-issuer
    #acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
    

spec:
  tls:
  - hosts:
    - kubeblzapp.ml
    - www.kubeblzapp.ml
    secretName: webapp2-tls

  rules:
  - host: kubeblzapp.ml
    http:
      paths:
      - backend:
          serviceName: web-2-service
          servicePort: 80

  - host: www.kubeblzapp.ml
    http:
      paths:
      - backend:
          serviceName: web-2-service
          servicePort: 80
