ingress-3.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.global-static-ip-name: "kube3-b"
  name: webapp3
spec:
  tls:
  - hosts:
    - kube-3.ml
    ##
    - www.kube-3.ml
    secretName: webapp3-tls
  rules:
  - host: kube-3.ml
    http:
      paths:
      - path: /
        backend: 
          serviceName: web-3-service
          servicePort: 80

  - host: www.kube-3.ml
    http:
      paths:
      - path: /
        backend: 
          serviceName: web-3-service
          servicePort: 80
