ingress-nodejsapp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "cluster-xyz-static-ip-nodjeapi"
  name: blzcluster-nodejs-api
spec:
  tls:
  - hosts:
    - apicluster-xyz.tk
    - www.apicluster-xyz.tk
    secretName: blzcluster-nodejs-api-tls
  rules:
  - host: apicluster-xyz.tk
    http:
      paths:
      #- path: /
      - backend: 
          serviceName: nodejsapi-service
          servicePort: 80

  - host: www.apicluster-xyz.tk
    http:
      paths:
      #- path: /
      -  backend: 
          serviceName: nodejsapi-service
          servicePort: 80
